# yogurt

./: .gitignore  Cargo.toml  docker-compose.yml
migrations/: 20240423204843_create_initial_tables.sql 23-44-45-431.sql
migrations1/: 001_create_users_table.sql  002_create_studios_table.sql  003_create_classes_table.sql  004_create_bookings_table.sql  005_create_payments_table.sql
src/: config.rs  db.rs  lib.rs  main.rs
src/auth/: auth.rs
src/handlers/: admin_handlers.rs  handlers.rs  mod.rs  public_handlers.rs  studio_handlers.rs  user_handlers.rs
src/models/: booking.rs  class.rs  mod.rs  payment.rs  studio.rs  user.rs
src/routes/: admin_routes.rs  mod.rs  protected_routes.rs  public_routes.rs  studio_owner_routes.rs  user_routes.rs
src/test/: test.rs
src/utils/: mod.rs  serialize_dt.rs  utils.rs
