[package]
name = "heyo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7.4", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "macros",
    "chrono",
] }
dotenv = "0.15"
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = "1.0.116"
serde = "1.0.198"
tower = "0.4.13"
bcrypt = "0.15.1"
tower-http = "0.5.2"
axum-login = "0.15.1"
http = "1.1.0"

[dev-dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1", features = ["full"] }
